Bug 288674 - Crashes when i close the export window (export to yandex-fotki)
Summary: Crashes when i close the export window (export to yandex-fotki)
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Plugin-WebService-YandexFotki (other bugs)
Version First Reported In: 5.2.0
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-10 18:02 UTC by Maxim Bogdanov
Modified: 2018-01-30 21:19 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.5.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Maxim Bogdanov 2011-12-10 18:02:02 UTC
Application: digikam (2.1.1)
KDE Platform Version: 4.7.2 (4.7.2)
Qt Version: 4.7.4
Operating System: Linux 3.0.0-14-generic i686
Distribution: Ubuntu 11.10

-- Information about the crash:
- What I was doing when the application crashed:
first select a few files
next click export to yandex fotki
and then click cancel or exit, and application crashes every time

- Custom settings of the application:
plugin for digikam for export to yandex

The crash can be reproduced every time.

-- Backtrace:
Application: digiKam (digikam), signal: Segmentation fault
[Current thread is 1 (Thread 0xb4c648c0 (LWP 5008))]

Thread 5 (Thread 0xb3be1b70 (LWP 5009)):
#0  0x004d6416 in __kernel_vsyscall ()
#1  0x00a9da5c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/i386-linux-gnu/libpthread.so.0
#2  0x00c7acfc in pthread_cond_wait () from /lib/i386-linux-gnu/libc.so.6
#3  0x06536cc0 in wait (time=4294967295, this=0x87177a8) at thread/qwaitcondition_unix.cpp:88
#4  QWaitCondition::wait (this=0x87176d4, mutex=0x87176d0, time=4294967295) at thread/qwaitcondition_unix.cpp:160
#5  0x081faf45 in Digikam::ScanController::run (this=0x8717498) at /build/buildd/digikam-2.1.1/core/digikam/database/scancontroller.cpp:647
#6  0x065367b3 in QThreadPrivate::start (arg=0x8717498) at thread/qthread_unix.cpp:331
#7  0x00a99d31 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#8  0x00c6d0ce in clone () from /lib/i386-linux-gnu/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 4 (Thread 0xb33e0b70 (LWP 5010)):
#0  0x00e73d10 in clock_gettime () from /lib/i386-linux-gnu/librt.so.1
#1  0x0658d7d5 in do_gettime (frac=0xb33dfe70, sec=0xb33dfe68) at tools/qelapsedtimer_unix.cpp:123
#2  qt_gettime () at tools/qelapsedtimer_unix.cpp:140
#3  0x066604b6 in QTimerInfoList::updateCurrentTime (this=0x873319c) at kernel/qeventdispatcher_unix.cpp:339
#4  0x0666080a in QTimerInfoList::timerWait (this=0x873319c, tm=...) at kernel/qeventdispatcher_unix.cpp:442
#5  0x0665f053 in timerSourcePrepareHelper (src=<optimized out>, timeout=0xb33dff7c) at kernel/qeventdispatcher_glib.cpp:136
#6  0x0665f0ed in timerSourcePrepare (source=0x8733168, timeout=<optimized out>) at kernel/qeventdispatcher_glib.cpp:169
#7  0x02b5088c in g_main_context_prepare () from /lib/i386-linux-gnu/libglib-2.0.so.0
#8  0x02b51637 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#9  0x02b51c2a in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#10 0x0665fb37 in QEventDispatcherGlib::processEvents (this=0x870dda0, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#11 0x066301dd in QEventLoop::processEvents (this=0xb33e0100, flags=...) at kernel/qeventloop.cpp:149
#12 0x06630421 in QEventLoop::exec (this=0xb33e0100, flags=...) at kernel/qeventloop.cpp:201
#13 0x0653390b in QThread::exec (this=0x8719c90) at thread/qthread.cpp:498
#14 0x06610e2d in QInotifyFileSystemWatcherEngine::run (this=0x8719c90) at io/qfilesystemwatcher_inotify.cpp:248
#15 0x065367b3 in QThreadPrivate::start (arg=0x8719c90) at thread/qthread_unix.cpp:331
#16 0x00a99d31 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#17 0x00c6d0ce in clone () from /lib/i386-linux-gnu/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 3 (Thread 0xb21ffb70 (LWP 5017)):
#0  0x00a9cd44 in __pthread_mutex_unlock_usercnt () from /lib/i386-linux-gnu/libpthread.so.0
#1  0x00c7af54 in pthread_mutex_unlock () from /lib/i386-linux-gnu/libc.so.6
#2  0x02b5020b in g_main_context_release () from /lib/i386-linux-gnu/libglib-2.0.so.0
#3  0x02b51906 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#4  0x02b51f9b in g_main_loop_run () from /lib/i386-linux-gnu/libglib-2.0.so.0
#5  0x04226cea in ?? () from /usr/lib/i386-linux-gnu/libgio-2.0.so.0
#6  0x02b785f4 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#7  0x00a99d31 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#8  0x00c6d0ce in clone () from /lib/i386-linux-gnu/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 2 (Thread 0xacf7fb70 (LWP 5018)):
#0  0x004d6416 in __kernel_vsyscall ()
#1  0x00a9da5c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/i386-linux-gnu/libpthread.so.0
#2  0x00c7acfc in pthread_cond_wait () from /lib/i386-linux-gnu/libc.so.6
#3  0x06536cc0 in wait (time=4294967295, this=0x8cba9d0) at thread/qwaitcondition_unix.cpp:88
#4  QWaitCondition::wait (this=0x8cba6a0, mutex=0x8cba69c, time=4294967295) at thread/qwaitcondition_unix.cpp:160
#5  0x03e7ef54 in Digikam::ParkingThread::run (this=0x8cba690) at /build/buildd/digikam-2.1.1/core/libs/threads/threadmanager.cpp:119
#6  0x065367b3 in QThreadPrivate::start (arg=0x8cba690) at thread/qthread_unix.cpp:331
#7  0x00a99d31 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#8  0x00c6d0ce in clone () from /lib/i386-linux-gnu/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 1 (Thread 0xb4c648c0 (LWP 5008)):
[KCrash Handler]
#7  same_key (key0=<optimized out>, h0=161660416, this=<optimized out>) at ../../include/QtCore/../../src/corelib/tools/qhash.h:225
#8  QHash<QObject*, QString>::findNode (this=<optimized out>, ahp=0x0, akey=<optimized out>) at ../../include/QtCore/../../src/corelib/tools/qhash.h:885
#9  0x0664cc77 in contains (this=0xa6caac4, akey=<optimized out>) at ../../include/QtCore/../../src/corelib/tools/qhash.h:872
#10 QSignalMapper::map (this=0xa6caa5c, sender=0x9a2be00) at kernel/qsignalmapper.cpp:267
#11 0x0664ce1e in QSignalMapper::map (this=0xa6caa5c) at kernel/qsignalmapper.cpp:257
#12 0x0664cf50 in QSignalMapper::qt_metacall (this=0xa6caa5c, _c=QMetaObject::InvokeMetaMethod, _id=4, _a=0xbfab3318) at .moc/release-shared/moc_qsignalmapper.cpp:87
#13 0x06637b7d in metacall (argv=0xbfab3318, idx=8, cl=QMetaObject::InvokeMetaMethod, object=0xa6caa5c) at kernel/qmetaobject.cpp:237
#14 QMetaObject::metacall (object=0xa6caa5c, cl=QMetaObject::InvokeMetaMethod, idx=8, argv=0xbfab3318) at kernel/qmetaobject.cpp:232
#15 0x06646a6a in QMetaObject::activate (sender=0x9a2be00, m=0x8528e60, local_signal_index=2, argv=0xbfab3318) at kernel/qobject.cpp:3278
#16 0x05300e1d in QAbstractButton::clicked (this=0x9a2be00, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:206
#17 0x04fff58d in QAbstractButtonPrivate::emitClicked (this=0xa8b0118) at widgets/qabstractbutton.cpp:546
#18 0x05000bfb in QAbstractButtonPrivate::click (this=0xa8b0118) at widgets/qabstractbutton.cpp:539
#19 0x05000eb6 in QAbstractButton::mouseReleaseEvent (this=0x9a2be00, e=0xbfab38cc) at widgets/qabstractbutton.cpp:1121
#20 0x04c45f98 in QWidget::event (this=0x9a2be00, event=0xbfab38cc) at kernel/qwidget.cpp:8295
#21 0x05000159 in QAbstractButton::event (this=0x9a2be00, e=0xbfab38cc) at widgets/qabstractbutton.cpp:1080
#22 0x050a2798 in QPushButton::event (this=0x9a2be00, e=0xbfab38cc) at widgets/qpushbutton.cpp:683
#23 0x04bebd54 in notify_helper (e=0xbfab38cc, receiver=0x9a2be00, this=0x85e41b0) at kernel/qapplication.cpp:4486
#24 QApplicationPrivate::notify_helper (this=0x85e41b0, receiver=0x9a2be00, e=0xbfab38cc) at kernel/qapplication.cpp:4458
#25 0x04bf1dbb in QApplication::notify (this=0x85e41b0, receiver=0x9a2be00, e=0xbfab38cc) at kernel/qapplication.cpp:4047
#26 0x019c1681 in KApplication::notify (this=0xbfab4170, receiver=0x9a2be00, event=0xbfab38cc) at ../../kdeui/kernel/kapplication.cpp:311
#27 0x0663119e in QCoreApplication::notifyInternal (this=0xbfab4170, receiver=0x9a2be00, event=0xbfab38cc) at kernel/qcoreapplication.cpp:787
#28 0x04becd15 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#29 QApplicationPrivate::sendMouseEvent (receiver=0x9a2be00, event=0xbfab38cc, alienWidget=0x9a2be00, nativeWidget=0xa6caad8, buttonDown=0x5556eb4, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3146
#30 0x04c792c4 in QETWidget::translateMouseEvent (this=0xa6caad8, event=0xbfab3d4c) at kernel/qapplication_x11.cpp:4568
#31 0x04c77e4d in QApplication::x11ProcessEvent (this=0xbfab4170, event=0xbfab3d4c) at kernel/qapplication_x11.cpp:3690
#32 0x04ca424c in x11EventSourceDispatch (s=0x85e78a8, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#33 0x02b5125f in g_main_context_dispatch () from /lib/i386-linux-gnu/libglib-2.0.so.0
#34 0x02b51990 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#35 0x02b51c2a in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#36 0x0665fada in QEventDispatcherGlib::processEvents (this=0x85a4068, flags=...) at kernel/qeventdispatcher_glib.cpp:422
#37 0x04ca3e3a in QGuiEventDispatcherGlib::processEvents (this=0x85a4068, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#38 0x066301dd in QEventLoop::processEvents (this=0xbfab4054, flags=...) at kernel/qeventloop.cpp:149
#39 0x06630421 in QEventLoop::exec (this=0xbfab4054, flags=...) at kernel/qeventloop.cpp:201
#40 0x0663519d in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1064
#41 0x04be98f4 in QApplication::exec () at kernel/qapplication.cpp:3760
#42 0x080b4b64 in main (argc=176649936, argv=0x0) at /build/buildd/digikam-2.1.1/core/digikam/main/main.cpp:232

Reported using DrKonqi
Comment 1 Alexander Potashev 2011-12-11 08:53:23 UTC
Git commit b3aaaeb147897ba5a44bb536062d2928f587098d by Alexander Potashev.
Committed on 11/12/2011 at 08:52.
Pushed by aspotashev into branch 'master'.

yandexfotki: Do not destroy the export dialog (fix crash)

BUG: 288674

M  +2    -12   yandexfotki/plugin_yandexfotki.cpp
M  +0    -5    yandexfotki/plugin_yandexfotki.h

http://commits.kde.org/kipi-plugins/b3aaaeb147897ba5a44bb536062d2928f587098d