yandexfotki: Do not destroy the export dialog (fix crash)

BUG: 288674