yandexfotki/plugin_yandexfotki.h
@@ -52,11 +52,6 @@ public Q_SLOTS:
     void slotExport();
 //    void slotImport();
 
-private Q_SLOTS:
-
-    // slot for cleaning up dialog data after closing
-    void slotDialogFinished(int result);
-
 private:
 
     KAction*                                  m_actionExport;
